# simply-pomo-timer

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.LGPLv3  README.md
app/: CMakeLists.txt  main.cpp
app/qml/: MainWindow.qml  PomodoroWindow.qml
app/resources/: resources.qrc
modules/: CMakeLists.txt
modules/timer/: CMakeLists.txt  pomodoro_timer.cpp
modules/timer/include/: pomodoro_timer.h
